<resources>
    <string name="app_name">Krishikkaran</string>
    <string name="sellerDetailsClick">Your Details</string>
    <string name="sellerDetailsView">Seller Details</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="string_server_response">response</string>
    <string name="modifyClick">Modify Your Product</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>All Products</item>
        <item>Add Products</item>
        <item>Your Requirements</item>
        <item>Bid</item>
        <item>Barter</item>
        <item>Feedback</item>
    </string-array>
    <string name="search">Search</string>
    <string-array name="category">
        <item>Select Category</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Spices</item>
        <item>Seeds and Plants</item>
        <item>Flowers</item>
        <item>Herbs and Cereals</item>
        <item>Dairy Products</item>
        <item>Animals</item>
        <item>Equipments</item>
        <item>Handloom</item>
        <item>Land For Rent</item>
        <item>Others</item>
    </string-array>
    <string-array name="quantity">
        <item>Select Quantity Unit</item>
        <item>KiloGrams</item>
        <item>Grams</item>
        <item>Litre</item>
        <item>Numbers</item>
        <item>Acre</item>
    </string-array>
    <string name="post_requirement">Post Your Requirement</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="amount_per_unit">Amount Per Unit</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="expected_price">Expected Price</string>
    <string name="requirement">Requirement</string>
    <string name="single_purchase">Single Purchase</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="exact_location">Exact Location</string>
    <string name="job">Job</string>
    <string name="location">Location</string>
    <string name="distance">Distance</string>
    <string name="yes">Yes</string>
    <string name="delivery_required">Delivery Required</string>
    <string name="user_details">User Details</string>
    <string name="name">Name</string>
    <string name="place">Place</string>
    <string name="view">View</string>
    <string name="mobile">Mobile Number</string>
    <string name="amount">Amount</string>
    <string name="biddedon">Bidded On</string>
    <string name="email">Email</string>
    <string name="post">Post</string>
    <string name="save">Save</string>
    <string name="barter">Barter</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="upload_image">Upload Image</string>
    <string name="interested_in_barter">Interested In Barter</string>
    <string name="text_item_delete">Delete</string>
    <string name="text_item_modify">Modify</string>
    <string name="text_item_bid">Bid</string>
    <string name="product_code">Product Code</string>
    <string name="district">District</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="min_bid_amount">Min Bid Amount</string>
    <string name="title_activity_next_to_main">NextToMainActivity</string>
    <string name="title_activity_seller_details_view">SellerDetailsViewActivity</string>
    <string name="title_activity_bid_product_click">BidProductClickActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="address">Address</string>
    <string name="land_number">Land Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_modify_click">ModifyClickActivity</string>
    <string name="title_activity_bid_list">BidListActivity</string>
    <string name="title_activity_barter_product_click">BarterProductClickActivity</string>
    <string name="title_activity_bid_your_product_click">BidYourProductClickActivity</string>
</resources>